--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
 
     <meta charset="utf-8">
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="プリコレ！はプリキュアのまとめサイトアンテナです。各まとめサイトのプリキュアに関する記事を閲覧できます。"/>
     <meta name="keywords" content="プリキュア,プリキュアまとめ,はぐぷり,precure,ぷりこれ,precolle">
 
